--- a/packages/client/src/public/root.css
+++ b/packages/client/src/public/root.css
@@ -1,4 +1,5 @@
 :root {
+    /* Colors */
     --light: #e6fffbfa;
     --primary: #3b5249;
     --primary-desat: #3e4f48; /* Desaturated 30% */
@@ -6,8 +7,6 @@
     --secondary-desat: #a4af99; /* Desatured 30% */
     --secondary-desat-darken: #a4af99; /* Desaturated 30%, Darkened 20% */
     --accent: #aa5042;
-    /* --playing-accent: #4068e0; */
-    /* --starred-accent: #ffff00; */
     --playing-accent: #34748b;
     --playing-accent-transparent: #34748b40;
     --owned-accent: #2c783f;
@@ -18,6 +17,8 @@
     --bg-3: #3b383b;
     --bg-4: #4e4a4e;
     --bg-transparent: #14131480;
+    /* Spacing */
+    --fixed-action-height: 2.25rem;
 }
 
 body {
@@ -25,7 +26,6 @@ body {
     color: var(--light);
     height: 100vh;
     font-family: 'Ubuntu', sans-serif;
-    --fixed-action-height: 2rem;
 }
 
 #root {
